# kirigami

./: CMakeLists.txt  config-OpenMP.h.cmake
autotests/: tst_actiontoolbar.qml
src/: CMakeLists.txt  columnview.cpp  imagecolors.cpp  kirigamiplugin.cpp  kirigamiplugin.h  plugins.qmltypes
src/controls/: AbstractApplicationHeader.qml  AbstractApplicationItem.qml  AbstractApplicationWindow.qml  AbstractCard.qml  AbstractListItem.qml  ActionToolBar.qml  BasicListItem.qml  Card.qml  CardsGridView.qml  Chip.qml  ContextDrawer.qml  Dialog.qml  GlobalDrawer.qml  ListSectionHeader.qml  OverlayDrawer.qml  OverlaySheet.qml  Page.qml  PagePoolAction.qml  PageRow.qml  PlaceholderMessage.qml  ScrollablePage.qml  SwipeListItem.qml  UrlButton.qml
src/controls/private/: ActionButton.qml  ActionIconGroup.qml  CMakeLists.txt  GlobalDrawerActionItem.qml
src/controls/private/globaltoolbar/: CMakeLists.txt  PageRowGlobalToolBarUI.qml  ToolBarPageHeader.qml
src/controls/templates/: AbstractApplicationHeader.qml  AbstractListItem.qml  AppHeaderSizeGroup.qml  CMakeLists.txt  InlineMessage.qml  OverlayDrawer.qml  OverlaySheet.qml
src/controls/templates/private/: CMakeLists.txt
src/delegates/: CMakeLists.txt  IconTitleSubtitle.qml  SubtitleDelegate.qml  TitleSubtitle.qml
src/dialogs/: CMakeLists.txt
src/layouts/: CMakeLists.txt
src/libkirigami/: CMakeLists.txt
src/platform/: CMakeLists.txt  platformpluginfactory.cpp  settings.cpp  styleselector.cpp  units.cpp
src/primitives/: CMakeLists.txt  ListItemDragHandle.qml  icon.cpp  icon.h  shadowedrectangle.h  shadowedtexture.h
src/styles/org.kde.desktop/: AbstractApplicationHeader.qml
tests/: actionsMenu.qml
